--- a/css/bootstrap-4.3.1.css
+++ b/css/bootstrap-4.3.1.css
@@ -5084,10 +5084,11 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .jumbotron {
-  padding: 2rem 1rem;
-  margin-bottom: 2rem;
+  padding: 1rem 0.5rem;
+  margin-bottom: 1rem;
   background-color: #e9ecef;
   border-radius: 0.3rem;
+  height: auto;
 }
 
 @media (min-width: 576px) {
